--- a/package.json
+++ b/package.json
@@ -2,15 +2,6 @@
   "name": "react-admin-tiny",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "antd": "^3.10.0",
-    "axios": "^0.18.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-loadable": "^5.5.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -21,10 +12,23 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "dependencies": {
+    "antd": "^3.10.0",
+    "axios": "^0.18.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.4"
+  },
   "devDependencies": {
+    "@types/react": "^16.4.18",
     "http-proxy-middleware": "^0.19.0",
     "node-sass": "^4.9.3",
-    "source-map-explorer": "^1.6.0"
+    "redux-devtools": "^3.4.1",
+    "source-map-explorer": "^1.6.0",
+    "typescript": "^3.1.3"
   },
   "browserslist": [
     ">0.2%",
