--- a/package.json
+++ b/package.json
@@ -13,20 +13,23 @@
     "extends": "react-app"
   },
   "dependencies": {
-    "antd": "^3.10.0",
+    "antd": "^3.10.1",
     "axios": "^0.18.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^16.4.18",
+    "css-loader": "^1.0.0",
     "http-proxy-middleware": "^0.19.0",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.9.4",
     "redux-devtools": "^3.4.1",
+    "sass-loader": "^7.1.0",
     "source-map-explorer": "^1.6.0",
     "typescript": "^3.1.3"
   },
